# atomic-rust-team

./: Cargo.toml  Makefile  README.md  build.rs  get_atomics.sh
.github/workflows/: build.yml  release.yml
atomic_matter/: Cargo.toml
atomic_matter/src/: atoms.rs  dependencies.rs  executor.rs  inputs.rs  lib.rs
src/: main.rs
