[workspace]
members = ["atomic_matter"]

[package]
name = "atomic-rust-team"
edition.workspace = true
version.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "atomic red team implementation in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
atomic_matter = { path = "atomic_matter"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2.141"
winapi = "0.3.9"
glob = "0.3.1"
clap = { version = "4.2.2", features = ["derive", "cargo", "string"] }
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0"
thiserror = "1.0"

[dependencies]
clap.workspace = true
env_logger.workspace = true
atomic_matter.workspace = true
log.workspace = true
serde_yaml.workspace = true


[features]
cargo = []

[build-dependencies]
atomic_matter = { path = "atomic_matter"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2.141"
winapi = "0.3.9"
glob = "0.3.1"
clap = { version = "4.2.2", features = ["derive", "cargo", "string"] }
env_logger = "0.10.0"
anyhow = "1.0"
log = "0.4.17"

